# mergequeue-uv

./: pyproject.toml
.config/: mq.toml
.github/actions/nx-pr-targets/: action.yml
.github/actions/turbo-pr-targets/: action.yml
.github/actions/uv-pr-targets/: action.yml
.github/workflows/: factory.yaml  pr.yaml  pr_targets.yaml
.trunk/: trunk.yaml
bazel/hotel/: BUILD
bazel/indigo/: BUILD
bazel/juliet/: BUILD
bazel/kilo/: BUILD
nx/alpha/: alpha.txt
nx/apps/wordcounter/: wordcounter.js
nx/bravo/: bravo.txt
nx/charlie/: charlie.txt
nx/delta/: delta.txt
nx/echo/: echo.txt
nx/foxtrot/: foxtrot.txt
nx/golf/: golf.txt
nx/hotel/: project.json
nx/indigo/: indigo.txt  project.json
nx/juliet/: juliet.txt  project.json
nx/kilo/: kilo.txt  project.json
tools/: README.md  detect_impacted_turbo_targets.py  detect_impacted_uv_targets.py  requirements.txt  upload_targets.py
turbo/: README.md  package.json
turbo/apps/wordcounter/: package.json  wordcounter.js
uv/apps/wordcounter/: pyproject.toml  wordcounter.py
uv/dict/alpha/: alpha.txt
uv/dict/bravo/: bravo.txt
uv/dict/charlie/: charlie.txt
uv/dict/delta/: delta.txt
uv/dict/echo/: echo.txt
uv/dict/foxtrot/: foxtrot.txt
uv/dict/golf/: golf.txt
uv/dict/hotel/: hotel.py  pyproject.toml
uv/dict/indigo/: indigo.py
uv/dict/juliet/: juliet.py  juliet.txt  pyproject.toml
uv/dict/kilo/: pyproject.toml
uv/lib/alpha/: alpha.txt
uv/lib/bravo/: bravo.txt
uv/lib/charlie/: charlie.txt
uv/lib/delta/: delta.txt
uv/lib/echo/: echo.txt
uv/lib/foxtrot/: foxtrot.txt
uv/lib/golf/: golf.txt
uv/lib/hotel/: hotel.txt
uv/lib/indigo/: indigo.txt  pyproject.toml
uv/lib/juliet/: juliet.txt
uv/lib/kilo/: kilo.py  kilo.txt
