[project]
name = "uv-wordcounter"
version = "0.1.0"
description = "Word counter application"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
wordcounter = "wordcounter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include files like lib packages do
include = ["wordcounter.py"]
