[project]
name = "uv-indigo"
version = "0.1.0"
description = "Indigo word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python files and data files in the current directory as the package
include = ["indigo.py", "__init__.py", "indigo.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
